--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -129,6 +129,7 @@
             $('.peach-img').show();
             $('.dark-img').hide();
             $('.pink-img').hide();
+            // $('.img-dash').innerHTML("<img src='{% static 'home/images/avatar-peach.png' %}' alt='img-dashboard' class='peach-img img-fluid img-dashboard d-none d-md-block'>");
             var myChart = new Chart(ctx, {
                         type: 'bar',
                         data: {
