--- a/home/templates/home/student_individual_view.html
+++ b/home/templates/home/student_individual_view.html
@@ -46,11 +46,11 @@
                                     </div>
                                 </div><!--row end-->
                                 <!-- STUB STUDENT NUMBER -->
-                                <div class="row">
-                                    <div class="col-sm-12 col-md-4 col-lg-2">
+                                <div class="row pt-5">
+                                    <div class="col-sm-6 col-md-4 col-lg-2">
                                         <div class="student-section font-weight-bold muli-font">STUDENT NUMBER</div>
                                     </div>
-                                    <div class="col-sm-12 col-md-8 col-lg-10">
+                                    <div class="col-sm-6 col-md-8 col-lg-10">
                                         <div class="student-section muli-font">
                                             <span class="student-copy" onclick="copyToClipboard('.student-number-text')" data-toggle="tooltip" title="Copy Student Number">
                                                 <span class="student-number-text">
@@ -62,19 +62,19 @@
                                 </div><!--row end-->
                                 <!-- STUB SECTION -->
                                 <div class="row">
-                                    <div class="col-sm-12 col-md-4 col-lg-2">
+                                    <div class="col-sm-6 col-md-4 col-lg-2">
                                         <div class="student-section font-weight-bold muli-font">SECTION</div>
                                     </div>
-                                    <div class="col-sm-12 col-md-8 col-lg-10">
+                                    <div class="col-sm-6 col-md-8 col-lg-10">
                                         <div class="student-section muli-font">{{ student.section.name }}</div>
                                     </div>
                                 </div><!--row end-->
                                 <!-- STUB GENDER-->
                                 <div class="row">
-                                    <div class="col-sm-12 col-md-4 col-lg-2">
+                                    <div class="col-sm-6 col-md-4 col-lg-2">
                                         <div class="student-section font-weight-bold muli-font">GENDER</div>
                                     </div>
-                                    <div class="col-sm-12 col-md-8 col-lg-10">
+                                    <div class="col-sm-6 col-md-8 col-lg-10">
                                         <div class="student-section muli-font">
                                             {% if student.gender == 0 %}
                                                 MALE
