--- a/home/templates/home/sections.html
+++ b/home/templates/home/sections.html
@@ -32,7 +32,7 @@
                 <!-- STUB View All -->
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="view-all-container m-2 pt-4 pl-3 muli-font">
+                        <div class="view-all-container m-2 p-3 pl-3 muli-font container-fluid">
                             The Computer Engineering Department currently have <strong class="font-weight-bold">{{ all_student_count }}</strong> 5th year students. Do you want to view them all? 
                             <!-- <a href="#" class="view-all-link">View All</a> -->
                             <a href="{% url 'home:student-list' %}" class="btn btn-danger border-20">View All Students</a>
@@ -42,7 +42,7 @@
                 <!-- STUB View All end-->
                 <div class="row pt-3">
                     {% for section in section_list %}
-                        <div class="col-sm-4">
+                        <div class="col-sm-12 col-lg-4">
                             <!--STUB Card -->
                             <div class="card mb-5 mx-5">
                                 <!-- Card image -->
